Defining java vesion