@@ -6,6 +6,9 @@
   <artifactId>gestao-escolar-web</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
+  <properties>
+
+  </properties>
 
   <dependencies>
     <dependency>
@@ -23,5 +26,16 @@
 
   <build>
     <finalName>school-management-web</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>21</source>
+          <target>21</target>
+          <compilerArgs>--enable-preview</compilerArgs>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
